--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
             setTimeout(resolve,t)
         })
     }
-    function go(){
-        green()
-        sleep(1000).then(()=>{
+    async function go(){
+        while(true){
+            green()
+            await sleep(1000)
             yellow()
-            return sleep(200)
-        }).then(()=>{
+            await sleep(200)
             red()
-            return sleep(500)
-        }).then(go)
+            await sleep(500)
+        }
     }
 </script>
