--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <div class='green'></div>
 <div class='yellow'></div>
 <div class='red'></div>
+<button id="next">next</button>
 
 <script>
     function green(){
@@ -50,14 +51,19 @@
             setTimeout(resolve,t)
         })
     }
+    function happen(element,eventName){
+        return new Promise((resolve,reject)=>{
+            element.addEventListener(eventName,resolve,{once:true})
+        })
+    }
     async function go(){
         while(true){
             green()
-            await sleep(1000)
+            await happen(document.getElementById("next"),"click")
             yellow()
-            await sleep(200)
+            await  happen(document.getElementById("next"),"click")
             red()
-            await sleep(500)
+            await  happen(document.getElementById("next"),"click")
         }
     }
 </script>
