--- a/index.html
+++ b/index.html
@@ -51,19 +51,29 @@
             setTimeout(resolve,t)
         })
     }
-    function happen(element,eventName){
-        return new Promise((resolve,reject)=>{
-            element.addEventListener(eventName,resolve,{once:true})
-        })
-    }
+    // function happen(element,eventName){
+    //     return new Promise((resolve,reject)=>{
+    //         element.addEventListener(eventName,resolve,{once:true})
+    //     })
+    // }
+    // async function go(){
+    //     while(true){
+    //         green()
+    //         await happen(document.getElementById("next"),"click")
+    //         yellow()
+    //         await happen(document.getElementById("next"),"click")
+    //         red()
+    //         await happen(document.getElementById("next"),"click")
+    //     }
+    // }
     async function go(){
         while(true){
             green()
-            await happen(document.getElementById("next"),"click")
+            await sleep(1000)
             yellow()
-            await  happen(document.getElementById("next"),"click")
+            await sleep(200)
             red()
-            await  happen(document.getElementById("next"),"click")
+            await sleep(500)
         }
     }
 </script>
